﻿18/11/2019: add special character in cleaning
21/10/2019: new senat group
10/09/2019: clean more html tags
09/09/2019: supports.publi writer encoding
09/05/2019: Word replacement history
07/05/2019: Word replacement first attempt
06/05/2019: Unknown supports edition for Europresse
03/05/2019: Filter in folders
02/05/2019: html extensions for Europresse, prc encoding an no empty theme in Filter
19/04/2019: First test version